--- a/lab1.html
+++ b/lab1.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 <form>
-	Email: <input type="text" name="email">
-	Username: <input type="text" name="username">
-	Password: <input type="password" name="password">
-	<input type="subit" name="submit" value="submit">
+	Email: <input type="text" name="email" id="txtEmail"><br>
+	Username: <input type="text" name="username" id="txtUsername"><br>
+	Password: <input type="password" name="password" id="txtPassword">	<br>
+	<input type="submit" name="submit" value="submit" onclick="validateEmptyValues()">
 </form>
 <script type="text/javascript" src="script.js"></script>
 </body>
